--- a/parkingenie.html
+++ b/parkingenie.html
@@ -5,7 +5,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-    crossorigin="anonymous"></script>
+	crossorigin="anonymous"></script>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -20,13 +20,45 @@
 		<nav class="navbar navbar-default">
 			<div class="container-fluid">
 				<div class="navbar-header">
-					<a class="navbar-brand" href="#">
-						<img alt="Brand" id="logo" src="assets/images/parkingenie.png">
-					</a>
+					<div class="col-sm-3">
+						<a class="navbar-brand" href="#">
+							<img alt="Brand" id="logo" src="assets/images/parkingenie.png">
+						</a>
+					</div>
+					<div class="col-sm-3 nav-links">
+						<ul>
+							<li>
+								<a href="#">email</a>
+							</li>
+							<li>
+								<a href="#">profile settings</a>
+							</li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</nav>
 	</header>
+	<div class="row" id="spacer"></div>
+
+	<div class="row">
+		<div class="wrapper">
+			<div class="col-sm-1"></div>
+			<div class="col-sm-7 place-holder" id="pg-map">
+				
+			</div>
+			<div class="col-sm-1"></div>
+			<div class="col-sm-2 place-holder" id="events">
+				
+			</div>
+			<div class="col-sm-1"></div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="wrapper">
+			<div class=""></div>
+		</div>
+	</div>
 </body>
 
 </html>
