--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 					<nav class="navbar navbar-default">
 						<div class="container-fluid">
 							<div class="navbar-header">
-
-									<div class="col-sm-12">
-										<img alt="Brand" id="logo" src="assets/images/Logomakr_7o3II6.png">
-									</div>
-
+								<ul class="nav nav-pills">
+									<li role="presentation" class="active"><a href="#">tab 1</a></li>
+									<li role="presentation"><a href="#">tab 2</a></li>
+									<li role="presentation"><a href="#">tab 3</a></li>
+								</ul>
 							</div>
 						</div>
 					</nav>
