added some functionality to the tabs in the header

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>ParkinGenie</title>
+	<meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
@@ -16,30 +18,28 @@
 	
 </head>
 <body>
-
-
-
-
 	<div class="row">
 		<div class="wrapper">
-
-			<div class="col-sm-3 place-holder" id="events">
+			<div class="col-sm-3 place-holder" id="interaction">
 				<header>
 					<nav class="navbar navbar-default">
 						<div class="container-fluid">
 							<div class="navbar-header">
 								<ul class="nav nav-pills">
-									<li role="presentation" class="active"><a href="#">tab 1</a></li>
-									<li role="presentation"><a href="#">tab 2</a></li>
-									<li role="presentation"><a href="#">tab 3</a></li>
+									<li id="begin-search-button" role="presentation"><a href="#">Begin Search</a></li>
+									<li id="email-button" role="presentation"><a href="#">Email</a></li>
+									<li id="events-button" role="presentation"><a href="#">Events</a></li>
 								</ul>
 							</div>
 						</div>
 					</nav>
 				</header>
-
+				<div class="col-sm-12">
+					<div id="dynamic"></div>
+					
+				</div>
 			</div>
-			<div class="col-sm-9 place-holder" id="pg-map">
+			<div class="col-sm-9" id="pg-map">
 				
 			</div>
 
@@ -47,45 +47,6 @@
 	</div>
 
 </body>
-<script>
-      var map, infoWindow;
-      function initMap() {
-        map = new google.maps.Map(document.getElementById('pg-map'), {
-          center: {lat: 35.228440, lng:  -80.834919},
-          mapTypeId: "satellite",
-          zoom: 15
-        });
-        infoWindow = new google.maps.InfoWindow;
-
-        // Try HTML5 geolocation.
-        if (navigator.geolocation) {
-          navigator.geolocation.getCurrentPosition(function(position) {
-            var pos = {
-              lat: position.coords.latitude,
-              lng: position.coords.longitude
-            };
-
-            infoWindow.setPosition(pos);
-            infoWindow.setContent('Location found.');
-            infoWindow.open(map);
-            map.setCenter(pos);
-          }, function() {
-            handleLocationError(true, infoWindow, map.getCenter());
-          });
-        } else {
-          // Browser doesn't support Geolocation
-          handleLocationError(false, infoWindow, map.getCenter());
-        }
-      }
-
-      function handleLocationError(browserHasGeolocation, infoWindow, pos) {
-        infoWindow.setPosition(pos);
-        infoWindow.setContent(browserHasGeolocation ?
-                              'Error: The Geolocation service failed.' :
-                              'Error: Your browser doesn\'t support geolocation.');
-        infoWindow.open(map);
-      }
-
-</script>
+<script type="text/javascript" src="assets/javascript/logic.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBXuihBh8bUno31ULWLeNLvtVNUOxlq_7A&callback=initMap" async defer></script>
 </html>
