added parking lot search

--- a/index.html
+++ b/index.html
@@ -39,14 +39,17 @@
 					
 				</div>
 			</div>
-			<div class="col-sm-9" id="pg-map">
+			<!-- <div class="col-sm-9" id="pg-map">
 				
-			</div>
+		</div> -->
+		<div id="pg-map" class="col-sm-9"></div>
+		
 
-		</div>
 	</div>
+</div>
 
 </body>
+<script type="text/javascript" src="assets/javascript/-.js"></script>
 <script type="text/javascript" src="assets/javascript/logic.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBXuihBh8bUno31ULWLeNLvtVNUOxlq_7A&callback=initMap" async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBXuihBh8bUno31ULWLeNLvtVNUOxlq_7A&libraries=places&callback=initMap" ></script>
 </html>
