changed arts js file from -.js to map.js and added susans firebase database

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 </div>
 
 </body>
-<script type="text/javascript" src="assets/javascript/-.js"></script>
+<script src="https://www.gstatic.com/firebasejs/3.7.5/firebase.js"></script>
+<script type="text/javascript" src="assets/javascript/map.js"></script>
 <script type="text/javascript" src="assets/javascript/logic.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBXuihBh8bUno31ULWLeNLvtVNUOxlq_7A&libraries=places&callback=initMap" ></script>
 </html>
