removed email elements from main page in favor of seperate login page

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
 							<div class="navbar-header">
 								<ul class="nav nav-pills">
 									<li id="begin-search-button" role="presentation"><a href="#">Begin Search</a></li>
-									<li id="email-button" role="presentation"><a href="#">Email</a></li>
-									<li id="events-button" role="presentation"><a href="#">Events</a></li>
+									<li id="poi" role="presentation"><a href="#">Points of Interest</a></li>
 								</ul>
 							</div>
 						</div>
@@ -39,15 +38,9 @@
 					
 				</div>
 			</div>
-			<!-- <div class="col-sm-9" id="pg-map">
-				
-		</div> -->
-		<div id="pg-map" class="col-sm-9"></div>
-		
-
+			<div id="pg-map" class="col-sm-9"></div>
+		</div>
 	</div>
-</div>
-
 </body>
 <script src="https://www.gstatic.com/firebasejs/3.7.5/firebase.js"></script>
 <script type="text/javascript" src="assets/javascript/map.js"></script>
