--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 					</nav>
 				</header>
 				<div class="col-sm-12">
+					<img src="assets/images/junk-genie.png">
 					<div id="dynamic"></div>
 					
 				</div>
