--- a/Logon.html
+++ b/Logon.html
@@ -7,7 +7,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-            crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -17,39 +17,45 @@
 
 
 </head>
-<body id="interaction">
-<div class="container" style="margin-top: 5%;">
-    <div class="col-md-4 col-md-offset-4">
-        <div class="panel panel-primary">
-            <div class="panel-heading">Login</div>
-            <div class="panel-body">
+<body>
+    <div class="row" id="interaction">
+        <div class="container" style="margin-top: 5%;">
+            <div class="col-md-4 col-md-offset-4">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">ParkinGenie Login</div>
+                    <div class="panel-body">
 
-                <!-- Login Form -->
-                <form role="form">
+                        <!-- Login Form -->
+                        <form role="form">
 
-                    <!-- Username Field -->
-                    <div class="row">
-                        <div class="form-group col-xs-12">
-                            <label for="username"><span class="text-danger" style="margin-right:5px;">*</span>Username:</label>
-                            <div class="input-group">
-                                <input class="form-control" id="username" type="text" name="username" placeholder="Username" required/>
-                                <span class="input-group-btn">
-                                <label class="btn btn-primary"><span class="glyphicon glyphicon-user" aria-hidden="true"></label>
-                            </span>
-                                </span>
+                            <!-- Username Field -->
+                            <div class="row">
+                                <div class="col-xs-3"></div>
+                                <div class="col-xs-4">
+                                    <img id="formGenie" src="assets/images/junk-genie.png">
+                                </div>
+                                <div class="col-xs-5"></div>
+                                <div class="form-group col-xs-12">
+                                    <label for="username"><span class="text-danger" style="margin-right:5px;">*</span>Username:</label>
+                                    <div class="input-group">
+                                        <input class="form-control" id="username" type="text" name="username" placeholder="Username" required/>
+                                        <span class="input-group-btn">
+                                            <label class="btn btn-primary"><span class="glyphicon glyphicon-user" aria-hidden="true"></label>
+                                        </span>
+                                    </span>
+                                </div>
                             </div>
                         </div>
-                    </div>
 
-                    <!-- Email Field -->
-                    <div class="row">
-                        <div class="form-group col-xs-12">
-                            <label for="password"><span class="text-danger" style="margin-right:5px;">*</span>Email:</label>
-                            <div class="input-group">
-                                <input class="form-control" id="email" type="email" name="email" placeholder="email" required/>
-                                <span class="input-group-btn">
-                                <label class="btn btn-primary"><span class="glyphicon glyphicon-email" aria-hidden="true"></label>
-                            </span>
+                        <!-- Email Field -->
+                        <div class="row">
+                            <div class="form-group col-xs-12">
+                                <label for="password"><span class="text-danger" style="margin-right:5px;">*</span>Email:</label>
+                                <div class="input-group">
+                                    <input class="form-control" id="email" type="email" name="email" placeholder="email" required/>
+                                    <span class="input-group-btn">
+                                        <label class="btn btn-primary"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></label>
+                                    </span>
                                 </span>
                             </div>
                         </div>
@@ -68,6 +74,7 @@
             </div>
         </div>
     </div>
+
 </body>
 <script src="https://www.gstatic.com/firebasejs/3.7.5/firebase.js"></script>
 <script type="text/javascript" src="assets/javascript/map.js"></script>
