--- a/index.html
+++ b/index.html
@@ -46,5 +46,5 @@
 <script src="https://www.gstatic.com/firebasejs/3.7.5/firebase.js"></script>
 <script type="text/javascript" src="assets/javascript/map.js"></script>
 <script type="text/javascript" src="assets/javascript/logic.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBXuihBh8bUno31ULWLeNLvtVNUOxlq_7A&libraries=places&callback=initMap" ></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBXuihBh8bUno31ULWLeNLvtVNUOxlq_7A&libraries=places&callback=initMap" async defer></script>
 </html>
