genie anchor addon

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					</nav>
 				</header>
 				<div class="col-sm-12">
-					<img src="assets/images/junk-genie.png">
+					<a href="assets/javascript/SKA-ParkinGenie.html"><img src="assets/images/junk-genie.png"></a>
 					<div id="dynamic"></div>
 					
 				</div>
